<resources>
    <string name="app_name">My Film Database</string>
    <string name="textview" translatable="false">TextView</string>
    <string name="about" translatable="false">About</string>
    <string name="app_name_about" translatable="false">Pelis cutres - About</string>
    <string name="crear_pelicula">Crear Pelicula</string>
    <string name="help" translatable="false">Help</string>
    <string name="borrar_pelicula">Borrar Peliculas</string>
    <string name="drawer_open" translatable="false">Open navigation drawer</string>
    <string name="drawer_close" translatable="false">Close navigation drawer</string>
    <string name="search" translatable="false">Search</string>
    <string name="drag_title" translatable="false">Films</string>
    <string name="drag_menu1" translatable="false">Títulos</string>
    <string name="drag_menu2">Librería</string>
    <string name="drag_menu3" translatable="false">Añadir Film</string>
    <string name="drag_menu4" translatable="false">Eliminar</string>
    <string name="drag_menu5" translatable="false">Buscar</string>
    <string name="drag_menu6">Configuración</string>
    <string name="drag_menu7" translatable="false">Salir</string>
    <string name="drag_menu8" translatable="false">Calificar</string>
    <string name="drag_menu9" translatable="false">About</string>
    <string name="drag_menu10" translatable="false">Help</string>
    <string name="ListTitleAct_TITLE">Títulos</string>
    <string name="ListFilmAct_TITLE">Librería</string>
    <string name="PantallaAltaAct_TITLE">Añadir Film</string>
    <string name="EliminarAct_TITLE">Eliminar Films</string>
    <string name="ListTitleSearchAct_TITLE"></string>
    <string name="ListCalificarAct_TITLE">Calificar Films</string>
    <string name="ListfilmDelete_TITLE">Modo Borrar</string>
    <string name="help_TITLE">Help</string>
    <string name="consejo_lisTitleAct">Consejo: Al manetener pulsado un título puedes modificar la calificación del Film.</string>
    <string name="consejo_lisFilmAct">Consejo: Al manetener pulsado en un Film puedes entrar en modo borrar Films.</string>
    <string name="consejo_PantallaAltaAct">Consejo: Rellena y presiona el botón de la esquina superior derecha para crear.</string>
    <string name="consejo_lisCalificarAct">Consejo: Al pulsar un título puedes modificar su calificación.</string>
    <string name="consejo_lisFilmDeleteAct">Consejo: Al pulsar en un Film puedes entrar en modo borrar Films.</string>
    <string name="help_menu1" translatable="false">Funcionamiento general de la aplicación</string>
    <string name="help_menu2" translatable="false">Cómo navegar entre las opciones</string>
    <string name="help_menu3" translatable="false">Ver títulos de films</string>
    <string name="help_menu4" translatable="false">Ver librería de films</string>
    <string name="help_menu5" translatable="false">Cómo añadir films</string>
    <string name="help_menu6" translatable="false">Cómo eliminar films</string>
    <string name="help_menu7" translatable="false">Búsqueda de protagonista</string>
    <string name="help_menu8" translatable="false">Calificar films</string>
    <string name="help_menu1_text1" translatable="false">La aplicación ofrece diversas funcionalidades para gestionar
         una filmoteca personal para el usuario. En donde el usuario puede crear, eliminar, recalificar films y buscar protagonistas.</string>
    <string name="help_menu1_subtitulo1" translatable="false">Método de acceso a las funcionalidades</string>
    <string name="help_menu1_text2" translatable="false">Mediante el botón de switch ubicado en la esquina izquierda superior
        de la aplicación se puede acceder a la panel lateral en donde se encuentra un menú de las funciones que puede realizar en la aplicación.</string>
    <string name="help_menu1_subtitulo2" translatable="false">Funcionalidades</string>
    <string name="help_menu1_text3" translatable="false">Las diversas funcionalidades de la aplicación ayuda al usuario
        a gestionar una filmoteca personal.</string>
    <string name="help_menu1_subtitulo4" translatable="false">Ver Títulos</string>
    <string name="help_menu1_text5" translatable="false">Vista principal de la aplicación, dónde
    se puede visualizar un listado de los títulos almacenados en la aplicación. En esta vista también se puede
    recalificar un film menteniendo presionado el título a modificar.</string>
    <string name="help_menu1_subtitulo5" translatable="false">Ver Librería</string>
    <string name="help_menu1_text6" translatable="false">Vista en dónde se visualiza todos los datos de los films
    almacenados de los films.</string>
    <string name="help_menu1_text14" translatable="false">En esta vista es posible borrar films de aplicación. Al mantener
        pulsado un film se entra en modo borrar. Se elimina los films seleccionados pulsando el botón
     ubicado en la esquina superior derecha de la aplicación.</string>
    <string name="help_menu1_subtitulo6" translatable="false">Añadir Film</string>
    <string name="help_menu1_text7" translatable="false">Existe la opción de añadir un nuevo film
        a tu filmoteca. Los métodos de acceso es por medio de la panel lateral o mediante un icono en el actionBar. Se ha de rellenar
        los campos necesarios y una vez los datos sean correctos presione el botón de la esquina superior derecha para dar de alta el nuevo film.</string>
    <string name="help_menu1_subtitulo7" translatable="false">Eliminar Film</string>
    <string name="help_menu1_text8" translatable="false">Para eliminar un film de la filmoteca existe el menú de la panel lateral
        que mostrará un listado de los datos de los films, dónde manteniendo pulsado un film seleccionas los items que se desea eliminar.</string>
    <string name="help_menu1_subtitulo8" translatable="false">Buscar protagonista</string>
    <string name="help_menu1_text9" translatable="false">Es posible hacer búsquedas de protagonistas. Según el protagonista se
        mostrará un listado de los títulos donde participó como protagonista. Los métodos de acceso se encuentran en el menú de la
        panel lateral y con el icono de la lupa en el actionBar.</string>
    <string name="help_menu1_subtitulo9" translatable="false">Calificar Film</string>
    <string name="help_menu1_text10" translatable="false">Se tiene la opción de recalificar un film. Al crear un film
        se le otorga una calificación personal, más adelante se pude volver a modificar la nota críetica del film.</string>
    <string name="help_menu1_text13" translatable="false">Para poder cambiar la nota crítica de un film se puede
        acceder al menú Calificar ubicado en la panel lateral. O manteniendo pulsado un título en la pantalla de Títulos.</string>
    <string name="help_menu1_subtitulo10" translatable="false">Salir de la aplicación</string>
    <string name="help_menu1_text11" translatable="false">En la panel lateral hay una opción de salir de la aplicación.</string>
    <string name="help_menu2_text1" translatable="false">El panel lateral de navegación es un panel en el que se muestran
        las principales opciones de navegación de la app en el borde izquierdo de la pantalla. La mayor parte del tiempo
        está oculto, pero aparece cuando el usuario desliza un dedo desde el borde izquierdo de la pantalla o, mientras
        está en el nivel superior de la app, el usuario toca el ícono de la app en la barra de acciones.</string>
    <string name="help_menu2_subtitulo1" translatable="false">Menus</string>
    <string name="help_menu2_text2" translatable="false">Con el panel lateral se accede a todos las funcionalidades de la aplicación.</string>
    <string name="menu2_desc_titulo" translatable="false">Al presionar "Títulos" se puede acceder a los títulos almacenados en la aplicación.</string>
  <string name="menu2_desc_libreria" translatable="false">Al presionar "Librería" se puede acceder a todos los datos almacenados.</string>
  <string name="menu2_desc_anadir" translatable="false">Al presionar "Añadir Film" se puede crear nuevos films.</string>
  <string name="menu2_desc_eliminar" translatable="false">Al presionar "Eliminar" se puede eliminar uno o varios films a la vez.</string>
  <string name="menu2_desc_buscar" translatable="false">Al presionar "Buscar" se puede buscar un protagonista y mostrar sus films.</string>
    <string name="help_menu4_text1" translatable="false">En el apartado librería puedes ver todos los
        datos de los films almacenados en la aplicación.</string>
    <string name="help_menu4_subtitulo1" translatable="false">Item de Librería</string>
    <string name="help_menu4_text2" translatable="false"> - Primera línea muestra el título del film.</string>
    <string name="help_menu4_text3" translatable="false"> - Segunda línea muestra el país del film.</string>
    <string name="help_menu4_text4" translatable="false"> - Tercera línea muestra el año de rodaje.</string>
    <string name="help_menu4_text5" translatable="false"> - Cuarta línea muestra el protagonista del film.</string>
    <string name="help_menu4_text6" translatable="false"> - Quinta línea muestra el director del film.</string>
    <string name="help_menu4_text7" translatable="false"> - Sexta línea muestra la calificación dada al film.</string>
    <string name="help_menu4_subtitulo2" translatable="false">Funciones extras</string>
    <string name="help_menu4_text8" translatable="false">Al mantener pulsado un film en la pantalla de Librería
         se accede al modo borrar, donde puede eliminar uno o más films de la aplicación.</string>
    <string name="help_menu4_text9" translatable="false">En el actionBar se tiene unos accesos directos para
    buscar protagonista, añadir film y acceso a configuración.</string>
   <string name="help_menu8_text1" translatable="false">Puedes modificar la calificación de la nota de crítica de cualquier film
   guardado.</string>
    <string name="help_menu8_subtitulo1" translatable="false">Diálogo de Calificación</string>
    <string name="help_menu8_text2" translatable="false">Cada media estrella representa un punto de la calificación.
    La calificación máxima es de 10 puntos. Después de cambiar la calificación de un film se otorga un método
    para deshacer el cambio, este método aparece como un mensaje en la parte inferior de la pnatalla.</string>
    <string name="help_menu8_subtitulo2" translatable="false">Métodos de acceso al cambio de calificación</string>
    <string name="help_menu8_text3" translatable="false">Existe dos métodos posibles para cambiar la calificación de un film.</string>
 <string name="help_menu8_subtitulo3" translatable="false">Método desde el menú de la panel lateral</string>
    <string name="help_menu8_text4" translatable="false">Desde la panel lateral se puede acceder al menú de Calificar, dónde se mostrará una lista de los
        títulos guardados en la aplicación. Para cambiar la nota crítica solo hace falta pulsar en el título del
        film que se quiere modificar.</string>
    <string name="help_menu8_subtitulo4" translatable="false">Método desde la pantalla de Títulos</string>
    <string name="help_menu8_text5" translatable="false">Desde la misma pantalla de Títulos se puede modificar la
        calificación de un film manteniendo pulsado el título que se desea cambiar.</string>
    <string name="versi_n_de_la_aplicaci_n">Versión de la aplicación</string>
    <string name="creadores_de_la_aplicaci_n">Creadores de la aplicación</string>
    <string name="italo_castillo_y_jorge_alvarez">Italo Castillo y Jorge Alvarez</string>
    <string name="protagonista">Protagonista:</string>
    <string name="director">Director:</string>
    <string name="pais">Pais:</string>
    <string name="any">Any:</string>
    <string name="nota_de_la_critica">Nota de la Critica:</string>
</resources>