<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"

            android:icon="@android:drawable/ic_dialog_info"
            android:title="@string/drag_menu1" />
        <item
            android:id="@+id/nav_1"
            android:icon="@android:drawable/ic_dialog_info"
            android:title="@string/drag_menu2"/>
        <item
            android:id="@+id/nav_2"
            android:icon="@android:drawable/ic_dialog_info"
            android:title="@string/drag_menu3" />
        <item
            android:id="@+id/nav_3"
            android:icon="@android:drawable/ic_dialog_info"
            android:title="@string/drag_menu4"/>
        <item
            android:id="@+id/nav_4"
            android:icon="@android:drawable/ic_dialog_info"
            android:title="@string/drag_menu5"/>

        <!-- Sección de configuración -->
        <item
            android:id="@+id/configuration_section"
            android:title="@string/drag_menu6">
            <menu>
                <item
                    android:id="@+id/nav_exit"
                    android:icon="@android:drawable/ic_dialog_info"
                    android:title="@string/drag_menu7" />
            </menu>
        </item>
    </group>

</menu>