<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/basehelpdescriptionRelativeLayout"
    xmlns:app="http://schemas.android.com/apk/lib/com.example.pr_idi.mydatabaseexample"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.pr_idi.mydatabaseexample.BaseHelpDescriptionActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="6dp"
        android:paddingRight="6dp">

        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"


            xmlns:tools="http://schemas.android.com/tools"
            android:orientation="vertical" android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbarAlwaysDrawVerticalTrack="false"
            android:scrollbarAlwaysDrawHorizontalTrack="false"
            android:scrollbars="vertical"
            android:paddingTop="16dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp">


            <TextView
                android:text="@string/help_menu4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tituloHeader"
                style="@style/Widget.AppCompat.TextView.SpinnerItem"
                android:paddingBottom="16dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                />

            <TextView
                android:text="@string/help_menu4_text1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/body1"
                android:layout_gravity="center_vertical|right"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:paddingTop="8dp"
                android:paddingBottom="8dp" />

            <TextView
                android:text="@string/help_menu4_subtitulo1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/subtitulo1"
                android:padding="8dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:layout_marginTop="8dp" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/imageView"
                android:maxWidth="152dp"
                android:maxHeight="122dp"
                android:adjustViewBounds="true"
                android:scaleType="fitCenter"
                android:layout_marginLeft="3dp"
                android:src="@drawable/item_libreria"
                android:layout_marginBottom="20dp"
                android:elevation="10dp"
                android:background="@android:drawable/dialog_holo_light_frame"/>


            <TextView
                android:text="@string/help_menu4_text2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/body2"
                android:layout_gravity="center_vertical|right"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:layout_marginBottom="8dp"
                android:paddingLeft="8dp" />
            <TextView
                android:text="@string/help_menu4_text3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/body3"
                android:layout_gravity="center_vertical|right"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:layout_marginBottom="8dp"
                android:paddingLeft="8dp" />
            <TextView
                android:text="@string/help_menu4_text4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/body4"
                android:layout_gravity="center_vertical|right"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:layout_marginBottom="8dp"
                android:paddingLeft="8dp" />
            <TextView
                android:text="@string/help_menu4_text5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/body5"
                android:layout_gravity="center_vertical|right"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:layout_marginBottom="8dp"
                android:paddingLeft="8dp" />
            <TextView
                android:text="@string/help_menu4_text6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/body6"
                android:layout_gravity="center_vertical|right"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:layout_marginBottom="8dp"
                android:paddingLeft="8dp" />
            <TextView
                android:text="@string/help_menu4_text7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/body7"
                android:layout_gravity="center_vertical|right"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:layout_marginBottom="8dp"
                android:paddingLeft="8dp" />

            <TextView
                android:text="@string/help_menu4_subtitulo2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/subtitulo2"
                android:padding="8dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:layout_marginTop="8dp" />
            <TextView
                android:text="@string/help_menu4_text8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/body8"
                android:layout_gravity="center_vertical|right"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:layout_marginBottom="8dp"
                android:paddingLeft="8dp" />
            <TextView
                android:text="@string/help_menu4_text9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/body9"
                android:layout_gravity="center_vertical|right"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:layout_marginBottom="8dp"
                android:paddingLeft="8dp" />

        </LinearLayout>


    </ScrollView>
</RelativeLayout>
