<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:background="@android:color/white">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="Titulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textTitulo"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:textColor="@android:color/black"
            android:textColorHighlight="@android:color/black"
            android:layout_weight="1"
            android:textSize="18sp" />

        <TextView
            android:text="@string/pais"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textPais"
            android:textColorHighlight="@android:color/black"
            android:layout_below="@+id/textTitulo"
            android:layout_alignParentEnd="true"
            android:layout_weight="1" />

        <TextView
            android:text="@string/any"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textAny"
            android:layout_weight="1" />
         <TextView
                android:text="@string/protagonista"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textProtagonista"
                android:textColorHighlight="@android:color/black"
                android:layout_below="@+id/textProtagonista"
                android:layout_alignParentStart="true"
                android:layout_weight="1" />

        <TextView
            android:text="@string/director"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textDirector"
            android:textColorHighlight="@android:color/black"
            android:layout_below="@+id/textView4"
            android:layout_alignParentStart="true"
            android:layout_weight="1" />

        <TextView
            android:text="@string/nota_de_la_critica"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textNotaCritica"
            android:textColorHighlight="@android:color/black"
            android:layout_below="@+id/textNotaCritica"
            android:layout_alignParentStart="true"
            android:layout_weight="1" />
    </LinearLayout>


</LinearLayout>