<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/basehelpdescriptionRelativeLayout"
    xmlns:app="http://schemas.android.com/apk/lib/com.example.pr_idi.mydatabaseexample"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    tools:context="com.example.pr_idi.mydatabaseexample.BaseHelpDescriptionActivity"
    android:layout_marginBottom="8dp"
    android:layout_marginLeft="8dp"
    android:layout_marginRight="8dp">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"


            xmlns:tools="http://schemas.android.com/tools"
            android:orientation="vertical" android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbarAlwaysDrawVerticalTrack="false"
            android:scrollbarAlwaysDrawHorizontalTrack="false"
            android:scrollbars="vertical"
            android:paddingTop="16dp">


            <TextView
                android:text="@string/help_menu8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tituloHeader"
                style="@style/Widget.AppCompat.TextView.SpinnerItem"
                android:paddingBottom="16dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                />

            <TextView
                android:text="@string/help_menu8_text1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/body1"
                android:layout_gravity="center_vertical|right"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:paddingBottom="8dp"
                android:paddingLeft="8dp"
                android:paddingTop="8dp" />

            <TextView
                android:text="@string/help_menu8_subtitulo1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/subtitulo1"
                android:padding="8dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:layout_marginTop="8dp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageView"
                android:maxWidth="182dp"
                android:maxHeight="182dp"
                android:adjustViewBounds="true"
                android:scaleType="fitCenter"
                android:layout_marginLeft="3dp"
                android:src="@drawable/calificar_image"
                android:layout_marginBottom="20dp"
                android:elevation="10dp"
                android:background="@android:drawable/dialog_holo_light_frame"
                android:layout_gravity="center_horizontal" />


            <TextView
                android:text="@string/help_menu8_text2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/body2"
                android:layout_gravity="center_vertical|right"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:layout_marginBottom="8dp"
                android:paddingLeft="8dp"
                android:paddingRight="8dp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageView2"
                android:maxWidth="222dp"
                android:maxHeight="222dp"
                android:adjustViewBounds="true"
                android:scaleType="fitCenter"
                android:layout_marginLeft="3dp"
                android:src="@drawable/deshacer_cambio_image"
                android:layout_marginBottom="20dp"
                android:elevation="10dp"
                android:background="@android:drawable/dialog_holo_light_frame"
                android:layout_gravity="center_horizontal" />

            <TextView
                android:text="@string/help_menu8_subtitulo2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/subtitulo2"
                android:padding="8dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:layout_marginTop="8dp" />

            <TextView
                android:text="@string/help_menu8_text3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/body3"
                android:layout_gravity="center_vertical|right"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:layout_marginBottom="8dp"
                android:paddingLeft="8dp"
                android:paddingRight="8dp" />


            <TextView
                android:text="@string/help_menu8_subtitulo3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/subtitulo3"
                android:padding="8dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:layout_marginTop="8dp" />
            <TextView
                android:text="@string/help_menu8_text4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/body4"
                android:layout_gravity="center_vertical|right"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:layout_marginBottom="8dp"
                android:paddingLeft="8dp"
                android:paddingRight="8dp" />

            <TextView
                android:text="@string/help_menu8_subtitulo4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/subtitulo4"
                android:padding="8dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:layout_marginTop="8dp" />
            <TextView
                android:text="@string/help_menu8_text5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/body5"
                android:layout_gravity="center_vertical|right"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:layout_marginBottom="8dp"
                android:paddingLeft="8dp"
                android:paddingRight="8dp" />

        </LinearLayout>


    </ScrollView>
</RelativeLayout>
